a working example with vault

--- a/modules/vault_gemini_backups/templates/config.yaml
+++ b/modules/vault_gemini_backups/templates/config.yaml
@@ -7,5 +7,5 @@ spec:
   persistentVolumeClaim:
     claimName: "${vault_claim_name}"
   schedule:
-    - every: 10 minutes
-      keep: 3
+    - every: "day"
+      keep: 5
