--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "init-platform": "cd live/platform/instance && env-cmd -f ../../../.env terragrunt init",
     "plan-platform": "cd live/platform/instance && env-cmd -f ../../../.env terragrunt plan",
     "apply-platform": "cd live/platform/instance && env-cmd -f ../../../.env terragrunt apply -auto-approve",
+    "state-pull-platform" : "cd live/platform/instance && env-cmd -f ../../../.env terragrunt state pull",
 
     "init-dev-nginx-test-local": "cd live/platform/nginx_test && env-cmd -f ../../../.env terragrunt init --terragrunt-source ../../..//modules/nginx_test",
     "plan-nginx-test-local": "cd live/platform/nginx_test && env-cmd -f ../../../.env terragrunt plan --terragrunt-source ../../..//modules/nginx_test",
     "apply-nginx-test-local": "cd live/platform/nginx_test && env-cmd -f ../../../.env terragrunt apply -auto-approve --terragrunt-source ../../..//modules/nginx_test",
+    "destroy-nginx-test-local": "cd live/platform/nginx_test && env-cmd -f ../../../.env terragrunt destroy -auto-approve --terragrunt-source ../../..//modules/nginx_test",
 
     "init-dev-nginx-test": "cd live/platform/nginx_test && env-cmd -f ../../../.env terragrunt init",
     "plan-nginx-test": "cd live/platform/nginx_test && env-cmd -f ../../../.env terragrunt plan",
