--- a/live/goldengulp/values.yaml
+++ b/live/goldengulp/values.yaml
@@ -16,7 +16,7 @@ extraEnv:
   - name: "FOUNDRY_AWS_CONFIG"
     value: "awsConfig.json"
   - name: "FOUNDRY_HOSTNAME"
-    value: "foundry2.goldengulp.com"
+    value: "foundry.goldengulp.com"
   - name: "FOUNDRY_PROXY_PORT"
     value: "443"
   - name: "FOUNDRY_PROXY_SSL"
