--- a/live/goldengulp_oauth2_proxy/values.yaml
+++ b/live/goldengulp_oauth2_proxy/values.yaml
@@ -2,28 +2,21 @@ podAnnotations:
   vault.hashicorp.com/agent-inject-secret-oauth2-proxy.cfg: "foundry/data/goldengulp/config"
   vault.hashicorp.com/agent-inject-template-oauth2-proxy.cfg: |
     {{- with secret "foundry/data/goldengulp/config" -}}
-    client_id = "{{ .Data.data.GITHUB_OAUTH2_PROXY_CLIENT_ID }}"
-    client_secret = "{{ .Data.data.GITHUB_OAUTH2_PROXY_CLIENT_SECRET }}"
+    client_id = "{{ .Data.data.OAUTH2_PROXY_CLIENT_ID }}"
+    client_secret = "{{ .Data.data.OAUTH2_PROXY_CLIENT_SECRET }}"
     cookie_secret = "{{ .Data.data.OAUTH2_PROXY_COOKIE_SECRET }}"
     http_address = "0.0.0.0:4180"
     upstreams = [ "file:///dev/null" ]
     email_domains = [ "*" ]
-    # provider = "oidc"
-    provider = "github"
+    provider = "oidc"
     reverse_proxy = true
     {{- end -}}
 
 extraEnv:
-#  - name: "OAUTH2_PROXY_OIDC_ISSUER_URL"
-#    value: "https://xmclark.us.auth0.com/"
-#  - name: "OAUTH2_PROXY_PROVIDER"
-#    value: "oidc"
-#  - name: "OAUTH2_PROXY_REDIRECT_URL"
-#    value: "https://foundry2.frost-wind-terror.group/oauth2/callback"
-#  - name: "OAUTH2_PROXY_UPSTREAMS"
-#    value: "http://foundry-vtt.frost-wind-terror.svc.cluster.local"
-#  - name: "OAUTH2_PROXY_ISSUER_URL"
-#    value: "https://xmclark.us.auth0.com"
+  - name: "OAUTH2_PROXY_OIDC_ISSUER_URL"
+    value: "https://xmclark.us.auth0.com/"
+  - name: "OAUTH2_PROXY_ISSUER_URL"
+    value: "https://xmclark.us.auth0.com"
   - name: "OAUTH2_PROXY_SILENCE_PING_LOGGING"
     value: "true"
 
