--- a/modules/foundry/foundry-vtt-helm/templates/clusterrolebinding.yaml
+++ b/modules/foundry/foundry-vtt-helm/templates/clusterrolebinding.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
-  name: role-tokenreview-binding
+  name: {{ include "foundry-vtt.fullname" . }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
