--- a/live/goldengulp/values.yaml
+++ b/live/goldengulp/values.yaml
@@ -37,3 +37,5 @@ extraEnv:
     value: "443"
   - name: "FOUNDRY_PROXY_SSL"
     value: "true"
+  - name: "FOUNDRY_MINIFY_STATIC_FILES"
+    value: "true"
